kubernetes/mediaplayback/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mediaplayback
  # Needed for iscsi to work
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
